# qtnotifications

./: .cmake.conf  .gitignore  .gitreview  CMakeLists.txt  LICENSE  README.md  REUSE.toml  configure.cmake  dependencies.yaml  licenseRule.json
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt  main.cpp
examples/qml/: CMakeLists.txt  Info.plist  main.cpp  main.qml
examples/qml/android/: AndroidManifest.xml
examples/widgets/: CMakeLists.txt  main.cpp
examples/widgets/android/: AndroidManifest.xml
src/: CMakeLists.txt
src/android/: AndroidManifest.xml  CMakeLists.txt
src/android/src/org/qtproject/qt/android/notifications/: QtNotifications.java  QtNotificationsActionReceiver.java
src/notifications/: CMakeLists.txt  qnotifications.cpp  qnotifications.h  qnotifications_global.h  qplatformnotificationengine.cpp  qplatformnotificationengine.h  qplatformnotificationengine_android.cpp  qplatformnotificationengine_android.h  qplatformnotificationengine_darwin.h  qplatformnotificationengine_darwin.mm  qplatformnotificationengine_linux.cpp  qplatformnotificationengine_linux.h  qplatformnotificationengine_windows.cpp  qplatformnotificationengine_windows.h
src/notifications/doc/: qtnotifications-engines.qdoc  qtnotifications-index.qdoc  qtnotifications-toc.qdoc  qtnotifications.qdoc  qtnotifications.qdocconf
src/notifications/qml/: CMakeLists.txt  qdeclarativenotifications.cpp  qdeclarativenotifications_p.h
